# PaperMemory

./: .gitignore  .prettierrc  404.html  CNAME  Readme.md  contributing.md  gulpfile.js  gulpfile.mjs  index.html  jsconfig.json  manifest.json  mkdocs.yml  package-lock.json  package.json  release-mv2-mv3.py  sitemap.xml  to_safari.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  other.md
.github/workflows/: automerge.yml  build.yml  ci.yaml  submit.yml
about/: index.html
ai/: Makefile  README.md  config.py  pyproject.toml
ai/abstract_scraper/: abstract_scraper.py  categories_to_scrape.py
ai/notebooks/: simple_eda.ipynb
ai/src/preprocessing/: cleaner.py
ai/tasks/: clean-abstracts.sh  get-fresh-data.sh
configuration/: index.html
css/: downloadButton.css
docs/: about.md  configuration.md  faq.md  features.md  getting-started.md  index.md
docs/stylesheets/: extra.css
extra/: iso4-journals.json
extra/imgs/: concat.py  gif.txt
faq/: index.html
features/: index.html
getting-started/: index.html
js/: arxiv_search.js  bibtex.js  jquery-easing.js  parsers.js  parsers.min.js  script.js  title.js
overrides/: home.html
scripts/: cell.js  release-mv2-mv3.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
src/background/: arxiv.js  background.js  (+3 more)
test/: browser.js  citations-scraper.js  processMemory.js  screenshots.js  test-browser.js  test-duplicates.js  test-gist.js  test-storage.js  test-sync.js  test-utils.js  testConfig.yaml  utilsForTests.js
tests/: browser.js  pupeteerScenario.js  tests.js
(+128 files in other folders)
