[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "arxiv>=1.4.2",
    "pandas>=1.4.4",
    "tqdm>=4.64.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
_.env_file = ".env"

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.8.0",
    "ipykernel>=6.15.3",
    "matplotlib>=3.6.0",
]
